--- a/iss/src/containers/App.css
+++ b/iss/src/containers/App.css
@@ -1,4 +1,4 @@
-@import url('http://api.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.css');
+@import url('https://api.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.css');
 .mapContainer {
     position: absolute;
     top: 0;
