--- a/iss/src/containers/App.css
+++ b/iss/src/containers/App.css
@@ -15,7 +15,8 @@
     top: 21px
 }
 
-.sidebarStyle {
+
+/* .sidebarStyle {
     display: inline-block;
     position: absolute;
     border-radius: 3px;
@@ -24,4 +25,4 @@
     color: #ffffff;
     padding: 6px 24px;
     font-weight: bold;
-}
+} */
